--- a/scala-js/examples/helloworld/helloworld.html
+++ b/scala-js/examples/helloworld/helloworld.html
@@ -43,6 +43,7 @@ $(function() {
 <p>
   <h4>Notes:</h4>
   <li><a href="https://github.com/krishnanraman/krishnanraman.github.io/blob/master/scala-js/examples/helloworld/Knapsack.scala">Source Code in Scala</a>
+  <li>Do NOT zoom in !!! The game is set up for fixed 900x900 coordinate space, not relative coordinates.
   <li>This is my first scala.js program, inspired by <a href="http://shadaj.me/">Shadaj</a>
   <li>As of July 2013, you can't use any Java built-in libraries in Scala.js, so I rely on JS for random numbers, not scala.util.Random
   <li>Thanks to Sébastien Doeraene for helping out with Scala.js
