--- a/jojogames.html
+++ b/jojogames.html
@@ -1,4 +1,10 @@
+<p>
+<p>
+<h1>Jojo Games></h1>
+<p>
 <ul>
+<li><a href="sub.html">Subtraction</a>
+<li><a href="add.html">Addition</a>
 <li><a href="squares.html">Squares</a>
 <li><a href="cubes.html">Cubes</a>
 <li><a href="fastmul.html">Multiplication</a>
