--- a/jojogames.html
+++ b/jojogames.html
@@ -3,12 +3,18 @@
 <h1>Jojo Games</h1>
 <p>
 <ul>
-<li><a href="sub.html">Subtraction</a>
-<li><a href="add.html">Addition</a>
+<li><a href="sub.html">Fast Subtraction</a>
+<li><a href="add.html">Fast Addition</a>
 <li><a href="squares.html">Squares</a>
 <li><a href="cubes.html">Cubes</a>
-<li><a href="fastmul.html">Multiplication</a>
-<li><a href="fastdiv.html">Division</a>
+<li><a href="fastmul.html">Fast Multiplication</a>
+<li><a href="fastdiv.html">Fast Division</a>
 <li><a href="det.html">Determinants</a>
 <li><a href="equations.html">Simultaneous Equations</a>
+<li><a href="longdiv.html">Long Division</a>
+<li><a href="fracadd.html">Add Fractions</a>
+<li><a href="fracsub.html">Subtract Fractions</a>
+<li><a href="fracmul.html">Multiply Fractions</a>
+<li><a href="fracdiv.html">Divide Fractions</a>
+<li><a href="choose.html">Combinatorics</a>
 </ul>
