--- a/jojogames.html
+++ b/jojogames.html
@@ -17,4 +17,5 @@
 <li><a href="fracmul.html">Multiply Fractions</a>
 <li><a href="fracdiv.html">Divide Fractions</a>
 <li><a href="choose.html">Combinatorics</a>
+<li><a href="triangles.html">Area of Triangles</a>
 </ul>
