--- a/jojogames.html
+++ b/jojogames.html
@@ -18,4 +18,7 @@
 <li><a href="fracdiv.html">Divide Fractions</a>
 <li><a href="choose.html">Combinatorics</a>
 <li><a href="triangles.html">Area of Triangles</a>
+<li><a href="pythagoras.html">Pythagoras Theorem</a>
+<li><a href="heron.html">Heron's Formula</a>
+<li><a href="https://linjat.snellman.net/#fp">Linjat</a>
 </ul>
