--- a/jojogames.html
+++ b/jojogames.html
@@ -3,6 +3,7 @@
 <h1>Jojo Games</h1>
 <p>
 <ul>
+<li><a href="http://45.56.113.224:8080/report">L E A D E R B O A R D</a>
 <li><a href="sub.html">Fast Subtraction</a>
 <li><a href="add.html">Fast Addition</a>
 <li><a href="squares.html">Squares</a>
