--- a/jojogames.html
+++ b/jojogames.html
@@ -21,4 +21,5 @@
 <li><a href="triangles.html">Area of Triangles</a>
 <li><a href="pythagoras.html">Pythagoras Theorem</a>
 <li><a href="heron.html">Heron's Formula</a>
+<li><a href="compfrac.html">Complete the fraction</a>
 </ul>
