--- a/mcmcknapsack.html
+++ b/mcmcknapsack.html
@@ -6,8 +6,9 @@
     <title>Knapsack MCMC</title>
     <!--<link href="catmouse.css" rel="stylesheet" type="text/css" />-->
   </head>
+  <body>
+  <center><button onclick="doMCMC()"><B>Run MCMC Knapsack</B></button></center> 
   <script src="jstat.js"></script>
   <script src="knapsack.js"></script>
-  <body>
   </body>
  </html>
