--- a/mcmcknapsack.html
+++ b/mcmcknapsack.html
@@ -7,7 +7,12 @@
     <!--<link href="catmouse.css" rel="stylesheet" type="text/css" />-->
   </head>
   <body>
-  <center><button onclick="doMCMC()"><B>Run MCMC Knapsack</B></button></center> 
+  <left>
+  <button id="btn" onclick="doMCMC()"><B>Run MCMC Knapsack Algorithm</B></button>
+<textarea rows="2" cols="300" id="status" readonly wrap="soft">
+  Press the button to Run MCMC Knapsack Algorithm
+ </textarea>
+ </left> 
   <script src="jstat.js"></script>
   <script src="knapsack.js"></script>
   </body>
