--- a/mcmcknapsack.html
+++ b/mcmcknapsack.html
@@ -9,8 +9,12 @@
   <body>
   <left>
   <button id="btn" onclick="doMCMC()"><B>Run MCMC Knapsack Algorithm</B></button>
-<textarea rows="2" cols="300" id="status" readonly wrap="soft">
+<textarea rows="2" cols="100" id="status" readonly wrap="soft">
   Press the button to Run MCMC Knapsack Algorithm
+ </textarea>
+ <textarea rows="2" cols="50" id="knapsack" readonly wrap="soft">
+ </textarea>
+ <textarea rows="2" cols="50" id="skeptic" readonly wrap="soft">
  </textarea>
  </left> 
   <script src="jstat.js"></script>
