--- a/mcmcknapsack.html
+++ b/mcmcknapsack.html
@@ -7,15 +7,15 @@
     <!--<link href="catmouse.css" rel="stylesheet" type="text/css" />-->
   </head>
   <body>
-  <left>
+    <left>
+  <table border=0>
+    <tr><td>
   <button id="btn" onclick="doMCMC()"><B>Run MCMC Knapsack Algorithm</B></button>
-<textarea rows="2" cols="100" id="status" readonly wrap="soft">
+  <tr><td>
+<textarea rows="10" cols="80" id="status" readonly wrap="soft">
   Press the button to Run MCMC Knapsack Algorithm
  </textarea>
- <textarea rows="2" cols="50" id="knapsack" readonly wrap="soft">
- </textarea>
- <textarea rows="2" cols="50" id="skeptic" readonly wrap="soft">
- </textarea>
+</table>
  </left> 
   <script src="jstat.js"></script>
   <script src="knapsack.js"></script>
