--- a/mcmcknapsack.html
+++ b/mcmcknapsack.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Knapsack MCMC</title>
-    <!--<link href="catmouse.css" rel="stylesheet" type="text/css" />-->
+    <link href="knapsack.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <left>
@@ -12,7 +12,7 @@
     <tr><td>
   <button id="btn" onclick="doMCMC()"><B>Run MCMC Knapsack Algorithm</B></button>
   <tr><td>
-<textarea rows="10" cols="80" id="status" readonly wrap="soft">
+<textarea rows="8" cols="80" id="status" readonly wrap="soft">
   Press the button to Run MCMC Knapsack Algorithm
  </textarea>
 </table>
