--- a/mcmcknapsack.html
+++ b/mcmcknapsack.html
@@ -11,6 +11,7 @@
   <table border=0>
     <tr><td>
   <button id="btn" onclick="doMCMC()"><B>Run MCMC Knapsack Algorithm</B></button>
+  <a href="https://github.com/krishnanraman/krishnanraman.github.io/blob/master/knapsack.js">Source Code</a>
   <tr><td>
 <textarea rows="8" cols="80" id="status" readonly wrap="soft">
   Press the button to Run MCMC Knapsack Algorithm
