--- a/mcmcknapsack2.html
+++ b/mcmcknapsack2.html
@@ -11,7 +11,7 @@
   <table border=0>
     <tr><td>
   <button id="btn" onclick="doMCMC()"><B>Run MCMC Knapsack (Interactive)</B></button>
-  <a href="https://github.com/krishnanraman/krishnanraman.github.io/blob/master/knapsack.js">Source Code</a>
+  <a href="https://github.com/krishnanraman/krishnanraman.github.io/blob/master/knapsack2.js">Source Code</a>
   <button id="btn2" onclick="doMCMC1000()"><B>MCMC vs Random: 100 Realizations</B></button>
   <tr><td>
 <textarea rows="8" cols="80" id="status" readonly wrap="soft">
