--- a/mcmcknapsack2.html
+++ b/mcmcknapsack2.html
@@ -21,6 +21,6 @@
 </table>
  </left> 
   <script src="jstat.js"></script>
-  <script src="knapsack.js"></script>
+  <script src="knapsack2.js"></script>
   </body>
  </html>
